Updates and deeltions

--- a/content/entries/2020-06-22-money-lab-8.md
+++ b/content/entries/2020-06-22-money-lab-8.md
@@ -1,22 +1,23 @@
 ---
 id: 2020-06-22-money-lab-8
 title: Unownability on the Blockchain
-section: talk
 slug: unownability-on-the-blockchain
-type: invited lecture and discussion
+section: research
+type: panel discussion
 year: 2020
 fullDate: 2020-06-22 00:00
+featured: false
+pinned: false
+summary: Aksioma, Ljubljana/SLO
 tags:
-  - blockchain art
   - fintech
   - ownership
   - commons
   - activism
-summary: Aksioma, Ljubljana/SLO
+  - video
+  - MoneyLab
 images:
   - assets/uploads/old/ccoins.jpg
-featured: false
-pinned: false
 ---
 ![](assets/uploads/old/ML8-logo.jpg)
 
