--- a/content/entries/2022-07-08-xcoax.md
+++ b/content/entries/2022-07-08-xcoax.md
@@ -1,21 +1,20 @@
 ---
 id: 2022-07-08-xcoax
 title: AI Art as Hyperobject-Like Portal to Global Warming
-section: talk
 slug: ai-art-as-hyperobject-like-portal-to-global-warming
-type: Conference presentation
+section: research
+type: conference presentation
 year: 2022
 fullDate: 2022-07-08 00:00
+featured: false
+pinned: false
+summary: xCoAx 2022
 tags:
   - AI art
   - hyperobjects
   - anthropocene
   - global warming
-  - digital art
-summary: xCoAx 2022
-images:
-featured: false
-pinned: false
+images: []
 ---
 Very happy to present at this year's xCoAx conference in Coimbra, Portugal, on Timothy Morton's concept of the hyperobject in relation to AI, by way of Tega Brain's installation piece _Asunder_, on a great panel also featuring Dejan Grba, Jerónimo Reyes-Retana, and Provides Ng.
 
