--- a/content/entries/2022-08-03-SUP.md
+++ b/content/entries/2022-08-03-SUP.md
@@ -1,18 +1,18 @@
 ---
 id: 2022-08-03-SUP
 title: Joining the Editorial Board of the Scottish University Press (Open Access)
-section: news
 slug: joining-the-editorial-board-of-the-scottish-university-press-open-access
-type: Announcement
+section: research
+type: null
 year: 2022
 fullDate: 2022-08-03 00:00
+featured: false
+pinned: false
+summary: ""
 tags:
   - Open Access
   - publishing
-summary: Online
-images:
-featured: false
-pinned: false
+images: []
 ---
 ![](assets/uploads/old/SUP.jpg)
 
