--- a/content/entries/2022-08-08-chimeras.md
+++ b/content/entries/2022-08-08-chimeras.md
@@ -1,22 +1,22 @@
 ---
 id: 2022-08-08-chimeras
-title: "Agential Assemblage & Tactical AI – Two Contributions to 'Chimeras: Inventory of Synthetic Cognition'"
-section: writing
+title: "Agential Assemblage & Tactical AI – Two Contributions to 'Chimeras:
+  Inventory of Synthetic Cognition'"
 slug: agential-assemblage-tactical-ai-two-contributions-to-chimeras-inventory-of-synthetic-cognition
-type: Book chapter
+section: research
+type: book chapter
 year: 2022
 fullDate: 2022-08-08 00:00
+featured: false
+pinned: false
+summary: Chimeras (Onassis Foundation) · Onassis Foundation
 tags:
   - AI art
   - agency
   - posthumanism
   - tactical AI
   - agential assemblages
-  - digital art
-summary: Chimeras (Onassis Foundation) · Onassis Foundation
-images:
-featured: false
-pinned: false
+images: []
 ---
 I was invited to contribute two entries to the encyclopaedic volume _Chimeras: Inventory of Synthetic Cognition_, published by the Onassis Foundation. The book collects critical perspectives on AI and digital art from over 150 researchers, activists, philosophers, and artists. It's an incredible group of contributors, and I'm very happy to be part of it.
 
