--- a/content/entries/2022-11-07-outland.md
+++ b/content/entries/2022-11-07-outland.md
@@ -13,6 +13,6 @@ tags:
   - blockchain art
   - NFTs
   - non-human agency
-images: null
+images: []
 ---
 [Outland.art](https://outland.art/) has published my short essay ["Blockchain Vitalism"](https://outland.art/blockchain-vitalism/). The essay concerns artistic experiments with blockchain that treat code outputs as living things, which suggest a radical recalibration of agency and point the way toward alternative systems of social organization. I discuss blockchain art projects by **Sarah Friend**, **Harm van den Dorpel**, **Primavera de Filippi**, and **Masaki Fujihata**.
