--- a/content/entries/2022-11-12-aksioma.md
+++ b/content/entries/2022-11-12-aksioma.md
@@ -10,13 +10,12 @@ featured: false
 pinned: false
 summary: Aksioma, Ljubljana/Slovenia
 tags:
-  - blockchain
   - token-gating
   - NFTs
   - blockchain art
   - activism
   - commons
-images: null
+images: []
 ---
 Nov 12, 2022, 17:00-18:30 CET
 Free live-stream from the Aksioma symposium "From Commons to NFTs", for a panel also featuring **Jaya Klara Brekke** and **Felix Stalder**, and moderated by **Inte Gloerich**
