--- a/content/entries/2023-02-01-aksioma.md
+++ b/content/entries/2023-02-01-aksioma.md
@@ -17,7 +17,7 @@ tags:
   - DAOs
   - digital commons
   - token-gating
-images: null
+images: []
 ---
 [Download link](https://aksioma.org/structures-of-belonging)
 
