--- a/content/entries/2023-02-20-outland.md
+++ b/content/entries/2023-02-20-outland.md
@@ -15,6 +15,6 @@ tags:
   - digital commons
   - smart contracts
   - financialisation
-images: null
+images: []
 ---
 [Outland.art](https://outland.art/) has published my short essay ["Taxation without Representation"](https://outland.art/simon-de-la-rouviere-this-artwork-is-always-on-sale/). The essay analysises Simon de la Rouviere's _This Artwork Is Always on Sale_ (2019) and its use of smart contracts to create a new royalty revenue scheme for digital artists.
