--- a/content/entries/2023-03-09-RSE.md
+++ b/content/entries/2023-03-09-RSE.md
@@ -4,7 +4,7 @@ title: "RSE Case study: Improving awareness of issues at the intersection of
   'gamification' and 'financialisation'"
 slug: rse-case-study-improving-awareness-of-issues-at-the-intersection-of-gamification-and-financialisation
 section: research
-type: case study
+type: null
 year: 2023
 fullDate: 2023-02-07 00:00
 featured: false
@@ -13,7 +13,6 @@ summary: ""
 tags:
   - gamification
   - financialisation
-  - research
-images: null
+images: []
 ---
 **The Royal Society of Edinburgh** has published a short case study of my funded RSE research network 'GAMIFICATION OF FINANCE - FINANCIALISATION OF PLAY' (co-lead is my colleague Dr. Darshana Jayemanne). The case study details some of our activities undertaken so far. You can read it [here](https://rse.org.uk/improving-awareness-of-issues-at-the-intersection-of-gamification-and-financialisation/).
