--- a/content/entries/2023-05-20-ISEA.md
+++ b/content/entries/2023-05-20-ISEA.md
@@ -3,7 +3,7 @@ id: 2023-05-20-ISEA
 title: ISEA 2023 panel co-organised by Joseph DeLappe and Laura Leuzzi
 slug: isea-2023-panel-co-organised-by-joseph-delappe-and-laura-leuzzi
 section: research
-type: conference paper
+type: conference presentation
 year: 2023
 fullDate: 2023-05-20 00:00
 featured: false
@@ -14,8 +14,7 @@ tags:
   - hyperobjects
   - anthropocene
   - global warming
-  - digital art
-images: null
+images: []
 ---
 If you're in Paris for ISAE 2023, come by the panel on digital art and activism co-organised by Joseph DeLappe and Laura Leuzzi. I'll be speaking about 'Activist Art on/of the Blockchain.'
 
