--- a/content/entries/2025-07-09-xcoax.md
+++ b/content/entries/2025-07-09-xcoax.md
@@ -3,7 +3,7 @@ id: 2025-07-09-xcoax
 title: xCoAx 2025 in Dundee!
 slug: xcoax-2025-in-dundee-open-call
 section: research
-type: event
+type: curatorial
 year: 2025
 fullDate: 2025-07-09 00:00
 featured: true
@@ -15,8 +15,7 @@ tags:
   - sound art
   - exhibition
   - performances
-  - conference
-images: null
+images: []
 ---
 I'm extremely excited to be co-hosting the lucky 13th iteration of xCoAx (the International Conference on Computation, Communication, Aesthetics & X) in Dundee in July 2025!
 
