--- a/content/entries/2022-08-24-freedata.md
+++ b/content/entries/2022-08-24-freedata.md
@@ -1,22 +1,20 @@
 ---
 id: 2022-08-24-freedata
 title: Thoughts on Free Data
-section: talk
 slug: thoughts-on-free-data
-type: Panel discussion
+section: research
+type: panel discussion
 year: 2022
 fullDate: 2022-08-24 00:00
+featured: false
+pinned: false
+summary: nextmuseum.io (Online)
 tags:
-  - commons
   - NFTs
   - blockchain art
   - authorship
-  - licensing
   - Creative Commons
-summary: nextmuseum.io (Online)
-images:
-featured: false
-pinned: false
+images: []
 ---
 Panel discussion feat. Constant Dullaart, Gabi Schulte-Lünzum, Ulrike Fladerer, and myself, taking place on August 24, 6pm CET. Free to join, sign-up info is below.
 
