--- a/content/entries/2023-02-07-RSE.md
+++ b/content/entries/2023-02-07-RSE.md
@@ -15,6 +15,6 @@ tags:
   - digital commons
   - smart contracts
   - financialisation
-images: null
+images: []
 ---
 **The Royal Society of Edinburgh** has invited my to write a short commentary on the impact and potential of NFTs for their Winter 2022 issue. The digital version of the article is [published here](https://rse.org.uk/resources/resource/blog/a-digital-art-revolution/).
